# Teaching_interactive_quality_evaluation_solution

./: .gitignore  readme  url.txt
course_interaction/: README.md
offline-asr-sub-asr-child-ch/lib/: libjsoncpp.so.1.9.2
offline-asr-sub-asr-child-ch/lib/cmake/jsoncpp/: jsoncppConfig-release.cmake
offline-asr-sub-asr-child-ch/lib/pkgconfig/: jsoncpp.pc
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/: CMakeLists.txt  README.md  main.cpp
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/chrome-base/: Makefile  cmake_install.cmake
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/chrome-base/base/: cmake_install.cmake
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/chrome-base/base/i18n/: cmake_install.cmake
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/chrome-base/url/: Makefile  cmake_install.cmake
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/config/: config.ini  config_comm.ini  config_pre.ini  config_prod.ini  config_test.ini
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/include/: tal_asr_api.h
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/lib/: libjsoncpp.so.1.9.2
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/lib/pkgconfig/: jsoncpp.pc
offline-asr-sub-e2e-ch/offline-asr-sub-e2e-ch/res/: cmvn.ark  config.json  md5.txt  readme.txt  words_dict.txt
